--- a/resources/template/page.xhtml
+++ b/resources/template/page.xhtml
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>${title}</title>
     <meta name="viewport" content="width=${imageWidth}, height=${imageHeight}" />
+    <link href="../Styles/style.css" type="text/css" rel="stylesheet"/>
   </head>
 
   <body style="margin:0;padding:0;">
